added imgs and headings

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,13 +4,39 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/*HEADING*/
+
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color:#fff
 }
 
+.header--secondary {
+    color:#fff;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.header--sub-header {
+    font-size: 21px;
+    color: gray;
+}
+
+.header--footer{
+    color:#fff;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+/*LINKS*/
+
 .link--cta {
+    font-size: 16px;
+    color:aquamarine;
+}
+
+.footer--link{
     font-size: 16px;
     color:aquamarine;
 }
